
AC_INIT([touchgui], [1.0])

AC_PREREQ(2.69)

AC_PROG_AWK
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_CONFIG_SRCDIR([version.c])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([])

dnl create these files
AC_CONFIG_FILES([Makefile localrun.sh touchguiconf.py],
                [chmod +x localrun.sh])

AC_OUTPUT
